# glpong

./: .gitattributes  .gitignore  AUTHORS  BUILD_WINDOWS.md  CMakeCache.txt  CMakeLists.txt  ChangeLog  INSTALLER.md  Info.plist  Info.plist.in  Makefile.am  Makefile.in  NEWS  PkgInfo  README  TODO  configure.ac  configure.in  glpong.1  glpong.gnumeric  glpong.spec  glpong.spec.in  installer_template.bat  release  version.plist  version.plist.in
data/: Makefile.am  glpong.icns
debian/: Makefile.am  README  README.Debian  changelog  control  copyright  rules
m4/: OpenAL.m4  OpenGL.m4  png.m4
src/: CMakeLists.txt  Makefile.am  ai.c  ai.h  game.c  game.h  image.c  image.h  input.c  input.h  main.c  map.c  map.h  physics.c  physics.h  sound.c  sound.h  text.c  text.h  timer.c  timer.h  utils.c  utils.h  video.c  video.h
