CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Release type")
PROJECT(glpong)

ADD_DEFINITIONS(-DPACKAGE="glpong" -DVERSION="1.4" -DDATADIR="data")

SET(OpenGL_GL_PREFERENCE GLVND)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(SDL2 REQUIRED sdl2)
FIND_PACKAGE(PNG REQUIRED)
PKG_CHECK_MODULES(OPENGL_PKG opengl)
IF(NOT OPENGL_PKG_FOUND)
    PKG_CHECK_MODULES(OPENGL_PKG gl REQUIRED)
ENDIF()
PKG_CHECK_MODULES(OPENAL openal)

INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR} ${OPENGL_PKG_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/src)
IF (${OPENAL_FOUND})
	ADD_DEFINITIONS(-DHAVE_SOUND)
	INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIRS})
	SET (SND_LIB "${OPENAL_LIBRARIES}")
ENDIF (${OPENAL_FOUND})

ADD_SUBDIRECTORY(src)
