AC_INIT(src/main.c)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(glpong, 1.1)

AC_PROG_CC
AC_PROG_INSTALL

AM_PATH_SDL(1.2.0,,AC_ERROR(Cannot find SDL.))
AM_PATH_OPENGL(,AC_ERROR(Cannot find OpenGL.))

CFLAGS="$CFLAGS $SDL_CFLAGS $GL_CFLAGS"
LIBS="$LIBS $SDL_LIBS -lSDL_image $GL_LIBS -lSDL_mixer"

case $target in
	*-apple-darwin*)
		MYDATADIR="$PACKAGE.app/Contents/Resources"
		IMGEXT="tga"
		;;
	*)
		MYDATADIR="@datadir@/glpong"
		IMGEXT="png"
	esac

CFLAGS="$CFLAGS -DDATADIR=\\\"$MYDATADIR\\\" -DIMGEXT=\\\"$IMGEXT\\\""

AC_OUTPUT(Makefile data/Makefile src/Makefile)

