AC_INIT(src/main.c)
AC_CANONICAL_TARGET
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(glpong, 1.1)

AC_PROG_CC
AC_PROG_INSTALL

AM_PATH_SDL(1.2.0,,AC_ERROR(Cannot find SDL.))
AM_PATH_OPENGL(,AC_ERROR(Cannot find OpenGL.))
AM_PATH_OPENAL(,AC_ERROR(Cannot find OpenAL. Get it from http://www.openal.org))

CFLAGS="$CFLAGS $SDL_CFLAGS $GL_CFLAGS $AL_CFLAGS"
LIBS="$LIBS $SDL_LIBS -lSDL_image $GL_LIBS $AL_LIBS"

case $target in
	*-apple-darwin*)
		MYDATADIR="$PACKAGE.app/Contents/Resources"
		IMGEXT="tga"
		;;
	*)
		MYDATADIR="$datadir/glpong"
		IMGEXT="png"
	esac

CFLAGS="$CFLAGS -DDATADIR=\\\"$MYDATADIR\\\" -DIMGEXT=\\\"$IMGEXT\\\""

AC_OUTPUT(Makefile data/Makefile src/Makefile glpong.spec)

